# LeFil

./: README.md  docker-compose.yml
api/: Dockerfile  README.md  pyproject.toml
api/api/: config.py  dependencies.py  main.py
api/api/routes/: auth.py  entries.py  keywords.py  status.py
backend/: pyproject.toml
backend/lefil/: config.py  main.py
backend/lefil/scraper/: base.py  runner.py
backend/lefil/scraper/helper/: __init__.py  constants.py  dict_functions.py  log_functions.py
backend/lefil/scraper/operations/: __init__.py  extract.py  summarize.py
backend/lefil/scraper/scrapers/: __init__.py  devto.py  github_trendings.py  hackernews.py  reddit.py  tumblr.py
frontend/: .gitignore  Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: DetailPanel.tsx  EntryCard.tsx  Sidebar.tsx
frontend/src/hooks/: useInfiniteFeed.ts
frontend/src/lib/: api.ts  auth.tsx  theme.tsx
structure/: README.md  pyproject.toml
structure/structure/meta/: __init__.py
structure/structure/models/: __init__.py  db.py  entry.py  summarizer.py
