[project]
name = "structure"
version = "0.1.0"
description = "Structures for LeFil"
authors = [
    {name = "Kamigaku",email = "kamigaku@gmail.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
